--- a/itk-api/pom.xml
+++ b/itk-api/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOP</version>
     <packaging>jar</packaging>
 
-    <name>snow-consumer</name>
+    <name>itk-api</name>
     <description>Spring Cloud project</description>
 
     <parent>
@@ -26,7 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>com.itk</groupId>
-            <artifactId>itk-api</artifactId>
+            <artifactId>itk-center-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
