--- a/itk-center/itk-service-impl/pom.xml
+++ b/itk-center/itk-service-impl/pom.xml
@@ -7,8 +7,8 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>itk-service</artifactId>
-	<name>itk-service</name>
+	<artifactId>itk-service-impl</artifactId>
+	<name>itk-service-impl</name>
 	<packaging>jar</packaging>
 
 	<dependencies>
