--- a/itk-api/src/main/resources/application.yml
+++ b/itk-api/src/main/resources/application.yml
@@ -22,5 +22,14 @@ spring:
         maxOpenPreparedStatements: 20
     application:
         name: snow-consumer
+    redis:
+        host: localhost
+        port: 6379
+        pool:
+          max-idle: 8
+          min-idle: 0
+          max-active: 8
+          max-wait: -1
+
 server:
     port: 3333
