--- a/itk-center/itk-service-impl/src/main/resources/application.yml
+++ b/itk-center/itk-service-impl/src/main/resources/application.yml
@@ -25,5 +25,8 @@ spring:
 server:
     port: 3333
 mybatis:
-  mapperLocations: classpath:mapper/*.xml
-  typeAliasesPackage: com.hand.cms.model
+  mapperLocations: classpath:mapper/*/*Mapper.xml
+  typeAliasesPackage: com.itk.*.model
+
+logging:
+  config: classpath:logback-spring.xml
