代码规范修改提交

--- a/itk-center/itk-service-impl/src/main/resources/application.yml
+++ b/itk-center/itk-service-impl/src/main/resources/application.yml
@@ -27,6 +27,6 @@ server:
 mybatis:
   mapperLocations: classpath:mapper/*/*Mapper.xml
   typeAliasesPackage: com.itk.*.model
-
+  checkConfigLocation: true
 logging:
   config: classpath:logback-spring.xml
