--- a/itk-center/itk-service-impl/src/main/resources/application.yml
+++ b/itk-center/itk-service-impl/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
     datasource:
-        name: test
-        url: jdbc:mysql://localhost:3306/itk
+        name: itk
+        url: jdbc:mysql://localhost:3306/itk?useUnicode=true&characterEncoding=utf8
         username: root
-        password: Q!w2e3r4t5Y^
+        password: '!QAZxsw2'
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
