--- a/itk-api/src/main/resources/application-prod.yml
+++ b/itk-api/src/main/resources/application-prod.yml
@@ -1,9 +1,9 @@
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://localhost:3306/itk?useUnicode=true&characterEncoding=utf8
+        url: jdbc:mysql://localhost:3306/test
         username: root
-        password: Q!w2e3r4t5Y^
+        password:
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
@@ -21,7 +21,15 @@ spring:
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
     application:
-        name: itk-center
+        name: snow-consumer
+    redis:
+        host: localhost
+        port: 6379
+        pool:
+          max-idle: 8
+          min-idle: 0
+          max-active: 8
+          max-wait: -1
 
-logging:
-  config: classpath:logback/logback-spring-uat.xml
+server:
+    port: 3333
