--- a/itk-center/itk-service-api/pom.xml
+++ b/itk-center/itk-service-api/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>itk-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.6</version>
+        </dependency>
     </dependencies>
 
 </project>
