--- a/itk-api/src/main/resources/application-prod.yml
+++ b/itk-api/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
     datasource:
-        name: test
-        url: jdbc:mysql://localhost:3306/test
+        name: itk
+        url: jdbc:mysql://localhost:3306/itk?useUnicode=true&characterEncoding=utf8
         username: root
         password:
         # 使用druid数据源
