--- a/itk-api/src/main/resources/application.yml
+++ b/itk-api/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        name: test
+        name: itk
         url: jdbc:mysql://localhost:3306/itk
         username: root
         password: '!QAZxsw2'
