--- a/itk-api/pom.xml
+++ b/itk-api/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>pagehelper</artifactId>
             <version>4.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
