--- a/itk-center/itk-common/pom.xml
+++ b/itk-center/itk-common/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <artifactId>itk-center</artifactId>
         <groupId>com.itk</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>itk-service-api</artifactId>
-    <name>itk-service-api</name>
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>itk-common</artifactId>
+    <name>itk-common</name>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,14 +20,8 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.itk</groupId>
-            <artifactId>itk-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>4.1.6</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
         </dependency>
     </dependencies>
 
