--- a/itk-center/pom.xml
+++ b/itk-center/pom.xml
@@ -13,6 +13,7 @@
 		<module>itk-service-api</module>
 		<module>itk-service-impl</module>
 		<module>itk-config</module>
+		<module>itk-common</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
