--- a/itk-api/pom.xml
+++ b/itk-api/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>com.itk</groupId>
-            <artifactId>itk-model</artifactId>
+            <artifactId>itk-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
